Refactor command structure and update package names for RequisiteRTP